--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,27 +1,59 @@
-<h1>Complete your profile</h1>
-
+<h1 class="text-muted">Complete your profile</h1>
+<br>
+<h4 class="text-muted">First, lets fill in your basic contact info</h4>
 <%= simple_form_for current_user.profile  do |f| %>
   <div class="row">
-    <div class="input-field col s6">
-      <%= f.input :address, label: false, placeholder: 'Please fill in your address', class: '' %>
+  <%- if current_user.profile.address.empty? %>
+    <div class="input-field col m4">
+      <%= f.input :address, label: false, placeholder: 'Please fill in your address', class: ''  %>
     </div>
-    <div class="input-field col s6">
-      <%= f.input :land_line, label: false, placeholder: 'Please fill in your land line', class: '' %>
+  <% end %>
+  <!-- todo: fix the current line or when the default value is provided -->
+  <%- if true #current_user.profile.land_line %>
+    <div class="input-field col m4">
+      <%= f.input :land_line, label: false, placeholder: 'Please fill in your land line', class: ''  %>
     </div>
+  <% end %>
+  <%- if current_user.profile.mobile_phone.empty? %>
+    <div class="input-field col m4">
+      <%= f.input :mobile_phone, label: false, placeholder: 'Please fill in your mobile phone', class: '' %>
+    </div>
+  <% end %>
   </div>
-
+  <hr>
+  <h4 class="text-muted">Second, lets fill in profession details</h4>
   <div class="row">
-    <div class="input-field col s6">
-      <%= f.input :speciality, label: false, as: :select, prompt: 'Select your speciality', collection: %w(Paediatrician Gynecologist Oncologist) %>
+    <div class="input-field col m6">
+      <%= f.input :profession, as: :select, prompt: 'Select your profession', collection: %w(None Physician Pharmacist Dentist Merchant-Company), class: 'selectpicker' %>
     </div>
-    <div class="input-field col s6">
-      <%= f.input :land_line, label: false, placeholder: 'Please fill in your land line', class: '' %>
+    <div class="input-field col m6">
+      <%= f.input :speciality, as: :select, prompt: 'Select your speciality',  collection: %w(None), class: 'selectpicker' %>
     </div>
   </div>
-
+  <hr>
+  <h4 class="text-muted">Finally lets complete some miscellanous details</h4>
   <div class="row">
-    <div class="actions">
-      <%= f.submit 'Complete your profile', class: 'btn btn-default' %>
+    <div class="input-field col m3">
+      <%= f.input :age, placeholder: 'Please fill in your age in years', class: 'selectpicker' %>
     </div>
+    <div class="input-field col m3">
+      <%= f.input :theme, as: :select, prompt: 'Preferred theme color',  collection: %w(green orange blue red teal), class: 'selectpicker' %>
+    </div>
+    <div class="input-field col m3">
+      <%= f.input :gender, as: :select, prompt: 'Your gender',  collection: %w(Male Female Group Unspecified) %>
+    </div>
+    <div class="input-field col m3">
+      <%= f.input :preferred_charting_library, as: :select, prompt: 'Preferred charting library',  collection: %w(HighCharts GoogleCharts ChartKick), class: 'selectpicker' %>
+    </div>
+
+   
+
   </div>
+    <br />
+    <div class="row">
+      <div class="col m3 offset-4">
+      <%= f.submit 'Update your profile', class: 'btn btn-primary' %>
+      </div>
+    </div>
+  
 <% end %>
