--- a/app/assets/javascripts/morph_search.js.erb
+++ b/app/assets/javascripts/morph_search.js.erb
@@ -21,8 +21,8 @@ ready = function() {
             setTimeout(function() {
               classie.remove(morphSearch, "hideInput");
               input.value = "";
-            }, 300);
-          }, 500);
+            }, 200);
+          }, 350);
         }
 
         input.blur();
@@ -38,9 +38,20 @@ ready = function() {
   // esc key closes search overlay
   // keyboard navigation events
   document.addEventListener("keydown", function(ev) {
+    // esc key closes search overlay
+    // keyboard navigation events
     var keyCode = ev.keyCode || ev.which;
     if (keyCode === 27 && isOpen) {
       toggleSearch(ev);
+    }
+    // add the ctrl-i functionality
+     if ((ev.metaKey || ev.ctrlKey) && String.fromCharCode(ev.which).toLowerCase() === "i") {
+        ev.preventDefault();
+        console.log('You entered the search mode');
+        if(!isOpen){
+          input.value = "a drug: "
+          toggleSearch(ev);
+        }
     }
   });
 
@@ -55,31 +66,35 @@ ready = function() {
       },
       dataType: "json",
       success: function(data) {
-        if( data.data != undefined ) {
-            // update the views here
-        //  get the search content div
-        let $searchContent = $(".morphsearch-content");
-        // get the drugs search results column
-        let dummy_column = '<div class="dummy-column"></div>';
-        $searchContent.html('');
-        $(dummy_column).appendTo($searchContent);
-        let $searchItems = $searchContent.children(".dummy-column");
-        let header = '<h2>' + data.type + 's</h2>';
-        $(header).appendTo($searchItems);
-        // update the search results
-        $.each(data.data, function(i, searchItem) {
-            let result = "<a class='dummy-media-object' href='";
-            result += "/drugs/";
-            result += searchItem.id;
-            result += 'data-description="' + searchItem.description + '"';
-            result += "'>";
-            result += '';
-            result += "<h3>";
-            result += searchItem.name.toUpperCase();
-            result += "</h3></a>";
-            $(result).appendTo($searchItems);
+          if (data.data == undefined) {
+              return;
+          }
+          let $searchContent = $(".morphsearch-content");
+          let dummy_column = '<div class="dummy-column"></div>';
+          $searchContent.html('');
+          $(dummy_column).appendTo($searchContent);
+          let $searchItems = $searchContent.children(".dummy-column");
+          let header = '<h2>' + data.type + 's</h2>';
+          $(header).appendTo($searchItems);
+          $.each(data.data, function (i, searchItem) {
+              result += "<a class='dummy-media-object' href='";
+              result += "/drugs/";
+              result += searchItem.id;
+              result += "'>";
+              result += '';
+              result += "<h3>";
+              result += searchItem.name.toUpperCase();
+              result += "</h3></a>";
+              $(result).appendTo($searchItems);
+              var $result = $(result);
+              $result.data('description', searchItem.description);
+
+              $result.on('hover mousenter', function () {
+                  let details = '<p class="dummy-media-object" href="';
+                  details += '/drugs/';
+
+              });
           });
-        }
       },
       error: function() {}
     });
