--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,2 +1,3 @@
+<!-- TODO: remove this page or redirect to another page -->
 <h1>Profiles#new</h1>
-<p>Find me in app/views/profiles/new.html.erb</p>
+<p>If you see this page, please contact the site admins immediately and report it, you should not see it.</p>
